# ollama

./: .gitignore  CMakeLists.txt
api/: types.go
fs/ggml/: ggml.go
llm/: server.go
model/models/qwen25vl/: model_vision.go
openvino/: CMakeLists.txt  export.go  generate_cgo_flags.go  openvino.go  openvino_stub.go  runner.go  server.go  types.go
openvino/csrc/: openvino_c.cpp
openvino/sdk/: include  lib
runner/: runner.go
server/: routes.go  sched.go
x/imagegen/: openvino_runner.go  openvino_server.go  types.go
x/imagegen/openvino/: CMakeLists.txt  export.go  openvino.go  openvino_c.cpp  openvino_c.h  openvino_stub.go
x/imagegen/openvino/csrc/: openvino_c.cpp
